<resources>
    <string name="app_name">RacerStore</string>
    <string name="log_user">Inicio de sesión</string>
    <string name="name">Nombre de Usuario</string>
    <string name="place_nam">Ingrese nombre de Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="place_pass">Ingrese Contraseña</string>
    <string name="new_log">Iniciar Sesión</string>
    <string name="logo">Contenido del logo</string>
    <string name="place_nam2">"  Ingrese código o descripción"</string>
    <string name="search_prod">Buscar producto</string>
    <string name="title_activity_splash">Splash_Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="addp">Agregar Producto</string>
    <string name="edtp">Editar Producto</string>
    <string name="icod">Código</string>
    <string name="icat">Categoría</string>
    <string name="inam">Nombre</string>
    <string name="ides">Descripción</string>
    <string name="iprecio">Precio</string>
    <string name="nf">Producto no encontrado</string>
    <string name="searchp">¿Que producto deseas editar?</string>
    <string name="pdest">Productos destacados</string>
    <string name="pnov">Novedades</string>
    <string name="price">"Precio: "</string>

</resources>