<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="70dp"
    android:theme="@style/Theme">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:src="@drawable/logoracer"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/tbuscar"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:elegantTextHeight="false"
        android:hint="@string/place_nam2"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:theme="@style/Theme.foo"
        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/search"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/racer"
        android:text="@string/search_prod"
        android:textColor="@color/white" />

</LinearLayout>