<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/software"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:ignore="InvalidId">
    <TextView
        android:id="@+id/edt1"
        android:layout_width="257dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="113dp"
        android:text="@string/addp"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="74dp"
        android:layout_height="78dp"
        android:layout_gravity="end"
        android:layout_marginStart="280dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:src="@drawable/df" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/paramd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            >

            <EditText
                android:id="@+id/icodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:textColor="@color/black"
                android:hint="@string/icod"
                />

            <EditText
                android:id="@+id/icategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:textColor="@color/black"
                android:hint="@string/icat"
                />

            <EditText
                android:id="@+id/inombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:textColor="@color/black"
                android:hint="@string/inam" />

            <EditText
                android:id="@+id/idescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:textColor="@color/black"
                android:hint="@string/ides"/>

            <EditText
                android:id="@+id/iprecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:textColor="@color/black"
                android:hint="@string/iprecio"
                android:inputType="numberDecimal" />
            <Spinner
                android:id="@+id/locate"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                />
            <RelativeLayout android:layout_height="wrap_content"  android:layout_width="match_parent">

                <TextView
                    android:layout_toRightOf="@id/imageView"
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="200dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="23dp"
                    android:layout_marginEnd="55dp"
                    android:hint="Link de imagen"
                    android:textColor="@color/black" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="-20dp"
                    android:layout_marginEnd="55dp"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="gallery.json"
                    app:lottie_loop="true" />

                <ImageView
                    android:id="@+id/clipyt"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="243dp"
                    android:layout_marginTop="56dp"
                    android:layout_marginEnd="99dp"
                    android:src="@drawable/clip" />

            </RelativeLayout>


                <ViewSwitcher
                android:id="@+id/viewSwitcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginStart="250dp">

                <Button
                    android:id="@+id/intodate"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/add"
                    android:src="@drawable/edit_edit"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:foregroundGravity="center"
                    app:lottie_autoPlay="false"
                    app:lottie_fileName="check.json"
                    app:lottie_loop="false" />

            </ViewSwitcher>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

