<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="600dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">
    <TextView
        android:id="@+id/edt1"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="40dp"
        android:text="@string/edtp"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />
    <me.relex.photodraweeview.PhotoDraweeView
        android:id="@+id/imagelog"
        android:layout_width="74dp"
        android:layout_height="78dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/df"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_toRightOf="@id/imagelog"
        app:lottie_fileName="gallery.json"
        app:lottie_loop="true"
        />
    <TextView
        android:id="@+id/codigoact"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="5dp"
        android:text="@string/edtp"
        android:textSize="13dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/paramd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            >

            <EditText
                android:id="@+id/icodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:hint="@string/icod"
                />

            <EditText
                android:id="@+id/icategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:hint="@string/icat"
                />

            <EditText
                android:id="@+id/inombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:hint="@string/inam" />

            <EditText
                android:id="@+id/idescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:hint="@string/ides"/>

            <EditText
                android:id="@+id/iprecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:hint="@string/iprecio"
                android:inputType="numberDecimal" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                >

                <Spinner
                    android:id="@+id/spinn"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true" />

                <Button
                    android:id="@+id/lik"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="23dp"
                    android:background="@drawable/clip"
                    android:gravity="center" />
                />
            </RelativeLayout>
            <RelativeLayout android:layout_height="wrap_content"  android:layout_width="match_parent">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    >

                    <ViewSwitcher
                        android:id="@+id/viewSwitcherdel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:foregroundGravity="center">

                        <Button
                            android:id="@+id/delete"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/delete" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/animationView2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            app:lottie_autoPlay="false"
                            app:lottie_fileName="delete.json"
                            app:lottie_loop="false" />
                    </ViewSwitcher>
                </RelativeLayout>
            <RelativeLayout android:layout_height="100dp"  android:layout_width="wrap_content">
            <ViewSwitcher
                    android:id="@+id/viewSwitchered"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="10dp"
                >
                    <Button
                    android:id="@+id/intodate"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="23dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/edit_edit" />
                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/animationView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:foregroundGravity="center"
                        app:lottie_autoPlay="false"
                        app:lottie_fileName="addp.json"
                        app:lottie_loop="false"/>
                </ViewSwitcher>
            </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

